tests/errors/setchar-err2.src
.IPPcode18
defvar GF@fail
move GF@fail string@something
defvar GF@len
STRLEN GF@len GF@fail
write GF@len
SETCHAR GF@fail GF@len string@error
write GF@fail